# dbt-autofix

./: .coverage  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CONTRIBUTING.md  README.md  dependabot.yml  notes.md  noxfile.py  pdm_build.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: codeowners-check.yml  nox-pr.yml  pytest-pr.yml  release.yml  schedule.yml  uv-dependency-submission.yml
dbt_autofix/: dbt_api.py  deprecations.py  duplicate_keys.py  fields_properties_configs.py  hub_packages.py  jinja.py  main.py  package_upgrade.py  refactor.py  retrieve_schemas.py  semantic_definitions.py
dbt_autofix/refactors/: constants.py  fancy_quotes_utils.py  results.py  yml.py
dbt_autofix/refactors/changesets/: dbt_project_yml.py  dbt_schema_yml.py  dbt_schema_yml_semantic_layer.py  dbt_sql.py  dbt_sql_improved.py
dbt_cleanup/: duplicate_keys.py  main.py  refactor.py
manual_fixes/: custom_configuration.md  dynamic_sql.md  iceberg_tables.md  misspelled_config_keys.md
pre_commit_hooks/: check_deprecations.py
src/dbt_autofix/: dbt_api.py  deprecations.py  fields_properties_configs.py  jinja.py  main.py  package_upgrade.py  refactor.py  retrieve_schemas.py
src/dbt_autofix/refactors/: constants.py  fancy_quotes_utils.py  results.py  yml.py
src/dbt_autofix/refactors/changesets/: dbt_project_yml.py  dbt_schema_yml.py  dbt_schema_yml_semantic_layer.py  dbt_sql.py  dbt_sql_improved.py
tests/: test_check_fields_no_overlap.py  test_duplicate_keys.py  test_refactor.py
tests/integration_tests/: test_full_dbt_projects.py
tests/integration_tests/dbt_projects/: project1_expected.stdout  project_behavior_changes_expected.stdout  project_jinja_templates_expected.stdout  project_semantic_layer_expected.stdout
tests/integration_tests/dbt_projects/project1/: dbt_project.yml
tests/integration_tests/dbt_projects/project1/models/: exposures.yml
tests/integration_tests/dbt_projects/project1/models/example/: analyses.yml  groups.yml  model_with_config.yml  model_with_custom_configs.sql  model_with_dbt_jinja.sql  model_with_post_hook.sql  schema_yml_with_tests.yml  semantic_models.yml  sources.yml  yml_with_anchors.yml  yml_with_custom_keys.yml  yml_with_dupes.yml  yml_with_tabs.yml
tests/integration_tests/dbt_projects/project1/tests/: null_email.sql  null_email2.sql
tests/integration_tests/dbt_projects/project1_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project1_expected/models/: exposures.yml
tests/integration_tests/dbt_projects/project1_expected/models/example/: analyses.yml  groups.yml  model_with_config.yml  model_with_custom_configs.sql  model_with_dbt_jinja.sql  model_with_dbt_jinja_hook.sql  model_with_post_hook.sql  schema_yml_with_tests.yml  sources.yml  yml_with_anchors.yml  yml_with_custom_keys.yml  yml_with_dupes.yml  yml_with_tabs.yml
tests/integration_tests/dbt_projects/project1_expected/tests/: null_email.sql  null_email2.sql
tests/integration_tests/dbt_projects/project_behavior_changes/: dbt_project.yml
tests/integration_tests/dbt_projects/project_behavior_changes/models/example/: schema.yml
tests/integration_tests/dbt_projects/project_behavior_changes_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_behavior_changes_expected/models/: how_to.md
tests/integration_tests/dbt_projects/project_behavior_changes_expected/models/example/: schema.yml
tests/integration_tests/dbt_projects/project_jinja_templates/: dbt_project.yml
tests/integration_tests/dbt_projects/project_jinja_templates/models/: schema.yml
tests/integration_tests/dbt_projects/project_jinja_templates_expected/models/: schema.yml
tests/integration_tests/dbt_projects/project_semantic_layer/: dbt_project.yml
tests/integration_tests/dbt_projects/project_semantic_layer/models/: customers.yml  locations.yml  locations_model.yml  order_items.yml  orders.yml
tests/integration_tests/dbt_projects/project_semantic_layer_expected/models/: customers.yml  locations_model.yml  order_items.yml  orders.yml  products.yml  supplies.yml
tests/integration_tests/package_upgrades/dbt_utils_package_lookup_map_2/: .gitignore  dbt_project.yml  dependencies.yml  package-lock.yml  packages.yml
tests/integration_tests/package_upgrades/mixed_versions/: packages.yml
tests/unit_tests/: test_check_fields_no_overlap.py  test_config_meta_autofix.py  test_dbt_api.py  test_dict_config_subkeys.py  test_fix_space_after_plus.py  test_import_from_package.py  test_jinja.py  test_main_cli.py  test_rec_check_yaml_path.py  test_refactor.py  test_serialize_config.py  test_should_skip_package.py
tests/unit_tests/dbt_projects/project_with_packages/: dbt_project.yml
tests/unit_tests/package_upgrades/: README.md  dbt_utils.json  test_dbt_package.py  test_dbt_package_file.py  test_dbt_package_text_file.py  test_dbt_package_version.py  test_fusion_compatible_versions.py  test_package_upgrade.py  test_parse_conformance.py  test_version_utils.py  test_yaml.py
(+11 files in other folders)
