[project]
name = "dbt-autofix"
description = "CLI to autofix deprecations in dbt projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.2",
    "typer>=0.15.2",
    "yamllint>=1.37.0",
    "rich>=13.7.0",
    "click<8.2.0",
    "ruamel-yaml>=0.18.10,<0.18.15",
    "httpx>=0.27.0",
    "dbt-common>=1.27,<2",
    "dbt-extractor>=0.5.0,<=0.6",
]

dynamic = ["version"]

[tool.uv]
package = true

[project.scripts]
dbt-autofix = "dbt_autofix.main:app"


[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.2.0",
    "nox",
]

[tool.pdm.build]
includes = ["dbt_autofix"]

[tool.pdm.version]
source = "scm"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "RUF", "PL", "TID", "T20"]
ignore = []


[tool.pyright]
include = [
    "dbt_autofix",
    "tests",
]
exclude = []
pythonVersion = "3.9"

typeCheckingMode = "basic"
reportPrivateUsage = false
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedExpression = true
reportMissingImports = false

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["PLR2004", "T201"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]