[project]
name = "dbt-autofix"
description = "CLI to autofix deprecations in dbt projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.2",
    "typer>=0.15.2",
    "yamllint>=1.37.0",
    "rich>=13.7.0",
    "click<8.2.0",
    "ruamel-yaml>=0.18.10,<0.18.15",
    "httpx>=0.27.0",
    "dbt-common>=1.27,<2",
    "dbt-extractor>=0.5.0,<=0.6",
    "dbt-fusion-package-tools",
]

dynamic = ["version"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "packages/dbt_fusion_package_tools",
]

[tool.uv.sources]
dbt-fusion-package-tools = { workspace = true }

[project.scripts]
dbt-autofix = "dbt_autofix.main:app"


[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.2.0",
    "nox",
]
docs = [
    "pydocstyle>=6.3.0",
]

[tool.pdm.build]
# Include pre_commit_hooks/ directory in distribution
# To enable .pre-commit-hooks.yaml functionality
includes = ["src/dbt_autofix", "pre_commit_hooks", "packages/dbt_fusion_package_tools"]

[tool.pdm.version]
source = "scm"
version_format = "pdm_build:format_version"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "RUF", "PL", "TID", "T20"]
ignore = []


[tool.pyright]
include = [
    "src/dbt_autofix",
    "tests",
]
exclude = []
pythonVersion = "3.9"

typeCheckingMode = "basic"
reportPrivateUsage = false
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedExpression = true
reportMissingImports = false

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["PLR2004", "T201"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "--ignore-glob=**/dbt_packages/**"

[tool.pydocstyle]
convention = "google"
# D100: Missing docstring in public module
# D101: Missing docstring in public class
# D102: Missing docstring in public method
# D103: Missing docstring in public function
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
# D107: Missing docstring in __init__
# D202: No blank lines allowed after function docstring
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D202"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true